name:              plus2tweet
version:           0.0.0
license:           MIT
license-file:      LICENSE
author:            YAMAMOTO Yuji
maintainer:        YAMAMOTO Yuji <whosekiteneverfly@gmail.com>
synopsis:          Forward your public posts on Google+ to Twitter.
description:       Forward your public posts on Google+ to Twitter.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/igrep/plus2tweet

source-repository head
  type: git
  location: https://github.com/igrep/plus2tweet.git

executable test
  buildable: True
  ghc-options: -Wall
  main-is: test.hs

  build-depends:
      base >= 4.0
    , Cabal >= 1.18
    , transformers >= 0.2.2
    , lifted-base >= 0.1
    , monad-control >= 0.3
    , authenticate-oauth >= 1.3
    , resourcet >= 0.3
    , conduit == 1.0.7.3
    , failure >= 0.2
    , http-types
    , http-conduit == 1.9.4.4
    , aeson >= 0.6
    , attoparsec >= 0.10
    , attoparsec-conduit >= 0.5
    , data-default >= 0.3
    , bytestring >= 0.9
    , text >= 0.11
    , time >= 1.4
    , containers
    , twitter-types
    , twitter-conduit
