name:              plus2tweet
version:           0.0.0
license:           MIT
license-file:      LICENSE
author:            YAMAMOTO Yuji
maintainer:        YAMAMOTO Yuji <whosekiteneverfly@gmail.com>
synopsis:          Forward your public posts on Google+ to Twitter.
description:       Forward your public posts on Google+ to Twitter.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/igrep/plus2tweet

source-repository head
  type: git
  location: https://github.com/igrep/plus2tweet.git

library
  ghc-options: -Wall
  exposed-modules:
      GooglePlus.Activity
  build-depends:
      base >= 4.0
    , Cabal >= 1.18
    , attoparsec >= 0.10
    , bytestring >= 0.9
    , text >= 0.11
    , http-conduit
    , aeson >= 0.6
    , attoparsec >= 0.10
    , time >= 1.4
--  , twitter-types
--  , twitter-conduit

executable test-api
  buildable: True
  ghc-options: -Wall
  main-is: test-api.hs

  build-depends:
      base >= 4.0
    , Cabal >= 1.18
    , text >= 0.11
    , bytestring >= 0.9
    , hxt
    , aeson >= 0.6
    , yaml
    , plus2tweet
    , http-conduit
    , time >= 1.4
    , attoparsec >= 0.10
    , plus2tweet

test-suite spec
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:    -Wall
  main-is:        Spec.hs
  other-modules:
      GooglePlus.ActivitySpec
  build-depends:
      base == 4.*
    , hspec >= 1.3
    , QuickCheck
    , text >= 0.11
    , plus2tweet
    , TraceUtils
